171019 - overflow fix when answer opened

--- a/src/sass/project/components/_answer.scss
+++ b/src/sass/project/components/_answer.scss
@@ -5,7 +5,7 @@ $h-arrow: 50px;
 	&__wrapper {
 		@include padding($pd-content);
 		@include position(absolute, 0 null null 100%);
-		height: 100vh;
+		min-height: 100vh;
 		width: 100%;
 		transform: translate3d(-50%, 0, 0);
 		@include will-change(transform, opacity, visibility);
@@ -23,12 +23,27 @@ $h-arrow: 50px;
 			user-select: initial;
 			opacity: 1;
 			visibility: visible;
-			overflow: auto;
+			.answer {
+				&__container {
+					max-height: 100%;
+					opacity: 1;
+					visibility: visible;
+				}
+			}
 		}
 	}
 	&__header {
 		color: $c-accordion-title;
 		position: relative;
+	}
+
+	&__container {
+		max-height: 95vh;
+		overflow: hidden;
+		opacity: 0;
+		visibility: hidden;
+		@include will-change(opacity, visibility, max-height);
+		@extend %anim-base;
 	}
 	&__category {
 		display: inline-block;
